Add cosine similarity feature